@@ -2964,7 +2964,13 @@
         <field name="domains"
                description="[REGISTERED_DOMAINS]"
                widget="domaintable"
-               validator="domainpurchase"/>
+               validator="domainpurchase"
+               required="true"
+               array="true"/>
+        <field name="remove"
+               description="[REMOVE]"
+               widget="submit"
+               validator="submit"/>
       </fields>
     </form>
 
@@ -2973,7 +2979,13 @@
         <field name="domains"
                description="[EXPIRED_DOMAINS]"
                widget="domaintable"
-               validator="domainpurchase"/>
+               validator="domainpurchase"
+               required="true"
+               array="true"/>
+        <field name="remove"
+               description="[REMOVE]"
+               widget="submit"
+               validator="submit"/>
       </fields>
     </form>
 
