@@ -24,19 +24,6 @@ require BASE_PATH . "include/SolidStatePage.class.php";
 class ExpiredDomainsPage extends SolidStatePage
 {
   /**
-   * Initialize Expired Domains Page
-   *
-   * Tell the DBO table to filter based on an expire date before today's date
-   */
-  function init()
-  {
-    parent::init();
-
-    // Only show expired domains
-    $this->forms['expired_domains']->getField( "domains" )->getWidget()->showExpiredDomainsOnly();
-  }
-
-  /**
    * Actions
    *
    * Actions handled by this page:
@@ -52,10 +39,45 @@ class ExpiredDomainsPage extends SolidStatePage
 	$this->searchTable( "expired_domains", "domains", $this->post );
 	break;
 
+      case "expired_domains":
+	if( isset( $this->post['remove'] ) )
+	  {
+	    $this->removeDomains();
+	  }
+	break;
+
       default:
 	// No matching action, refer to base class
 	parent::action( $action_name );
       }
+  }
+
+  /**
+   * Initialize Expired Domains Page
+   *
+   * Tell the DBO table to filter based on an expire date before today's date
+   */
+  function init()
+  {
+    parent::init();
+
+    // Only show expired domains
+    $this->forms['expired_domains']->getField( "domains" )->getWidget()->showExpiredDomainsOnly();
+  }
+
+  /**
+   * Remove Domains
+   */
+  public function removeDomains()
+  {
+    // Delete domains
+    foreach( $this->post['domains'] as $domainDBO )
+      {
+	delete_DomainServicePurchaseDBO( $domainDBO );
+      }
+
+    $this->setMessage( array( "type" => "[DOMAINS_DELETED]" ) );
+    $this->reload();
   }
 }
 ?>
