@@ -24,19 +24,6 @@ require BASE_PATH . "include/SolidStatePage.class.php";
 class RegisteredDomainsPage extends SolidStatePage
 {
   /**
-   * Initialize Registered Domains Page
-   *
-   * Sets up the domaindbo table to filter out expired domains.
-   */
-  function init()
-  {
-    parent::init();
-
-    // Filter out expired domains
-    $this->forms['registered_domains']->getField( "domains" )->getWidget()->showActiveDomainsOnly();
-  }
-
-  /**
    * Action
    *
    * Actions handled by this page:
@@ -52,11 +39,45 @@ class RegisteredDomainsPage extends SolidStatePage
 	$this->searchTable( "registered_domains", "domains", $this->post );
 	break;
 
+      case "registered_domains":
+	if( isset( $this->post['remove'] ) )
+	  {
+	    $this->removeDomains();
+	  }
+	break;
+
       default:
 	// No matching action, refer to base class
 	parent::action( $action_name );
       }
   }
-}
 
+  /**
+   * Initialize Registered Domains Page
+   *
+   * Sets up the domaindbo table to filter out expired domains.
+   */
+  function init()
+  {
+    parent::init();
+
+    // Filter out expired domains
+    $this->forms['registered_domains']->getField( "domains" )->getWidget()->showActiveDomainsOnly();
+  }
+
+  /**
+   * Remove Domains
+   */
+  public function removeDomains()
+  {
+    // Delete domains
+    foreach( $this->post['domains'] as $domainDBO )
+      {
+	delete_DomainServicePurchaseDBO( $domainDBO );
+      }
+
+    $this->setMessage( array( "type" => "[DOMAINS_DELETED]" ) );
+    $this->reload();
+  }
+}
 ?>
